Fixed anchor links scrolling too far on page

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <body>
 	<!--Nav Bar on Desktop-->
+	<div class="anchor" id="home"></div>
     <nav class="nav-main">
 		<h1 class="nav-title"><a href="index.html">ECHO</a></h1>
 		<div class="menu-btn" onclick="toggleNav(), toggleDim()">
+			<div id="toggle_div"></div>
             <div class="menu-btn_burger"></div>
         </div>
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#testimonials">TESTIMONIALS</a></li>
 			<li><a href="#pricing">PRICING</a></li>
@@ -85,7 +87,7 @@
 </div>
 
 <!--Row 3-->
-<div class="row3" id="about">
+<div class="row3 anchor" id="about">
 	<div class="about">
 		<div><h4>LEARN A LITTLE ABOUT US</h4></div>
 		<div><hr></div>
@@ -116,7 +118,7 @@
 </div>
 
 <!--Row 4-->
-<div class="row4" id="testimonials">
+<div class="row4 anchor" id="testimonials">
 	<div class="testimonial">
 		<h2 class="testimonial">What Do Our Clients Say?</h2>
 		<div class="break"></div>
@@ -129,7 +131,7 @@
 </div>
 
 <!--Row 5-->
-<div class="row5" id="pricing">
+<div class="row5 anchor" id="pricing">
 	<div class="pricing">
 		<h2>So how much does it cost to leave the Earth?</h2>
 		<h3>How much you got? We'll take that plus some more</h3>
@@ -153,7 +155,7 @@
 </div>
 
 <!--Row 6-->
-<div class="row6" id="contact">
+<div class="row6 anchor" id="contact">
 	<div class="contact">
 		<h1>Contact Us</h1>
 		<h3>Are you ready to experience the awe-inspiring wonders of our galaxy? We know you are. 
