Made some small adjustments to screen dim and a couple images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!--Nav Bar on Desktop-->
 	<div class="anchor" id="home"></div>
     <nav class="nav-main">
-		<h1 class="nav-title"><a href="index.html">ECHO</a></h1>
+		<h1 class="nav-title"><a href="#home">ECHO</a></h1>
 		<div class="menu-btn" onclick="toggleNav(), toggleDim()">
 			<div id="toggle_div"></div>
             <div class="menu-btn_burger"></div>
@@ -25,12 +25,14 @@
 			<li><a href="#contact">CONTACT</a></li>
         </ul>
 	</nav>
+
+	<div class="dimmer"></div>
 	
 <!--Nav Bar on Mobile-->
     <aside class="nav-sidebar">
         <ul>
             <li><span>Menu</span></li>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#testimonials">TESTIMONIALS</a></li>
 			<li><a href="#pricing">PRICING</a></li>
@@ -83,7 +85,7 @@
 <div class="row2">
 		<img class="stats" src="img/stats-1.png">
 		<img class="stats" src="img/stats-2.png">
-		<img class="stats" src="img/stats-3.png">
+		<img class="stats" src="img/stats-3-1.png">
 </div>
 
 <!--Row 3-->
