Working on adding an array to the learn more button

--- a/index.html
+++ b/index.html
@@ -116,7 +116,15 @@
 		<div class="break"></div>
 
 		<div class="center">
-			<button class="page-buttons">LEARN MORE</button>
+			<button id="about-button" class="page-buttons">LEARN MORE</button>
+			<div id ="myPopup2" class="popup">
+				<div class="popup-content">
+				<span class="close2">&times;</span>
+				<h2>An Array Of Adjectives</h2>
+				<h3>TO DESCRIBE ECHO</h3>
+				<div id="array"></div>
+		</div>
+		</div>
 		</div>
 </div>
 
