Added array to the learn more button under the about section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
 				<span class="close2">&times;</span>
 				<h2>An Array Of Adjectives</h2>
 				<h3>TO DESCRIBE ECHO</h3>
-				<div id="array"></div>
+				<div class="array">
+				<div id="adjectives"></div>
+				<hr>
+				<div id="last"></div>
+			</div>
+		
 		</div>
 		</div>
 		</div>
@@ -148,14 +153,14 @@
 		<h3>How much you got? We'll take that plus some more</h3>
 		<br>
 		<p>Space travel is kinda difficult. We have put years and years of R&D into this company and so the price will reflect that dedication.
-            If you are wanting to get on the next shuttle outta here then you will be looking at <b>3 easy payments of 100k and 1 complicated 
-            payment of 200k.</b> If you need to use a few credit cards, that's okay.</p>
+            If you are wanting to get on the next shuttle outta here then you will be looking at 3 easy payments of a lot of money and 1 complicated 
+            payment of a whole lot of money. If you need to use a few credit cards, that's okay.</p>
 
 		<p>Interested in a payment plan? We can work with you on easy, no hassle incremental payments towards your adventure into
 			space exploration. If you participate in our super safe (not sketchy at all) experiments, we can knock a payment off.</p>
 
 		<p>So what are you waiting for? Grab your checkbook, write down 500k and send it on over to us here at Echo Space Industries.
-			If you have any further questions about pricing or payment options, just click the button below.</p>
+			To calculate your trip price, just click the button below and enter all the required information.</p>
 		
 	<button id ="pricing-button" class="page-buttons">MORE INFO ON PRICING</button>
 	<div id ="myPopup" class="popup">
@@ -219,7 +224,9 @@
 		<br>
 		<br>
 		<h2>Your Price:</h2>
+		<div class="dollar-sign">
 		<input type="text" name="totalPrice" id="totalPrice" value="">
+		</div>
 		</p>
 	</form>
 	</div>
