added text to about section, added screenshot about yelp, deleted images that were not being used,

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="row2">
 		<img class="stats" src="img/stats-1.png">
 		<img class="stats" src="img/stats-2.png">
-		<img class="stats" src="img/stats-3-1.png">
+		<img class="stats" src="img/stats-3.png">
 </div>
 
 <!--Row 3-->
@@ -99,18 +99,21 @@
 	<div class="break"></div>
 	<div class="break"></div>
 		<div class="primary col"><h4><span class="numbers2">01</span>PROVEN TRACK RECORD</h4>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus neque esse non, iure totam laborum adipisci quis voluptatem corrupti, 
-				architecto amet quam labore a. Alias earum unde quia! Similique, nesciunt.</p>
+			<p>As you can see above, we have been in business for 14 years, successfully launched more than 500 rockets, carrying more than 12,000 people into
+				space. Over this time we have only lost 3 passengers to the void of space. That's only 0.0005% of all passengers! Not too shabby if you ask us.
+			</p>
 		</div>
 
 		<div class="secondary col"><h4><span class="numbers2">02</span>GOVERNMENT FUNDING</h4>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus neque esse non, iure totam laborum adipisci quis voluptatem corrupti, 
-				architecto amet quam labore a. Alias earum unde quia! Similique, nesciunt.</p>
+			<p>Because space chartering is a new field, the government has taken a special interest in our business. They provide yearly funding that ensures our flights 
+				our as safe and effective as possible. All the government asks in return is that you sell all your data and never question them no matter what.
+			</p>
 		</div>
 
 		<div class="tertiary col"><h4><span class="numbers2">03</span>FIVE STAR YELP REVIEWS</h4>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus neque esse non, iure totam laborum adipisci quis voluptatem corrupti, 
-				architecto amet quam labore a. Alias earum unde quia! Similique, nesciunt.</p>
+			<p>We think our reviews speak for themselves. We don't actually have a Yelp page because those yahoos over there wouldn't approve us. They said they don't think we
+				are a "real business." But we just know our page would be full of 5 star reviews if we had one!<a href="img/yelp-page.png" target="_blank"> →Screenshot of Proof</a></p>
+				
 		</div>
 
 		<div class="break"></div>
@@ -149,7 +152,7 @@
 <!--Row 5-->
 <div class="row5 anchor" id="pricing">
 	<div class="pricing">
-		<h2>So how much does it cost to leave the Earth?</h2>
+		<h2>So how much does all this cost?</h2>
 		<h3>How much you got? We'll take that plus some more</h3>
 		<br>
 		<p>Space travel is kinda difficult. We have put years and years of R&D into this company and so the price will reflect that dedication.
@@ -224,11 +227,8 @@
 		<br>
 		<br>
 		<h2>Your Price:</h2>
-		<div class="dollar-sign">
 		<input type="text" name="totalPrice" id="totalPrice" value="">
-		</div>
 		</p>
-	</form>
 	</div>
 	</div>
 	
