Fixed nth-child styling issue on array

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <!--Row 1-->
 <div class="row1">
 	<div class="featured">
-		<h2>We don't just build rockets</h2>
-		<h3>We sometimes launch them too</h3>
+		<h2>We don't just launch rockets</h2>
+		<h3>We sometimes land them too</h3>
 		<br>
 		<p>Let's face it, the world is pretty crazy right now. Wouldn't you just like to escape? Why not blast off this rock into the great unknown of
 			space with Echo Space Industries! Coronavirus can't survive in space ya know. 
@@ -94,13 +94,13 @@
 	<div class="about">
 		<div><h4>LEARN A LITTLE ABOUT US</h4></div>
 		<div><hr></div>
-		<div><h3>Why your next launch should be with Echo</h3></div>
+		<div><h3>Why your next trip should be with Echo</h3></div>
 	</div>
 	<div class="break"></div>
 	<div class="break"></div>
 		<div class="primary col"><h4><span class="numbers2">01</span>PROVEN TRACK RECORD</h4>
-			<p>As you can see above, we have been in business for 14 years, successfully launched more than 500 rockets, carrying more than 12,000 people into
-				space. Over this time we have only lost 3 passengers to the void of space. That's only 0.0005% of all passengers! Not too shabby if you ask us.
+			<p>As you can see above, we have been in business for 14 years and successfully launched more than 500 rockets carrying more than 12,000 people into
+				space. Over this time we have only lost 3 passengers to the eternal abyss. That's only 0.0005% of all passengers! Not too shabby if you ask us.
 			</p>
 		</div>
 
@@ -111,8 +111,9 @@
 		</div>
 
 		<div class="tertiary col"><h4><span class="numbers2">03</span>FIVE STAR YELP REVIEWS</h4>
-			<p>We think our reviews speak for themselves. We don't actually have a Yelp page because those yahoos over there wouldn't approve us. They said they don't think we
-				are a "real business." But we just know our page would be full of 5 star reviews if we had one!<a href="img/yelp-page.png" target="_blank"> →Screenshot of Proof</a></p>
+			<p>We think our reviews speak for themselves. Pop over to our Yelp page by clicking the link listed below and check out all our 5 star reviews! Customer
+				satisfaction is our highest priority from the moment you step on board to the moment you land at your celestial destination. 
+				<a href="https://www.yelp.com/biz/echo-space-industries-louisville" target="_blank"> →Yelp Page</a></p>
 				
 		</div>
 
@@ -126,7 +127,7 @@
 				<h2>An Array Of Adjectives</h2>
 				<h3>TO DESCRIBE ECHO</h3>
 				<div class="array">
-				<div id="adjectives"></div>
+				<ul id="adjectives"></ul>
 				<hr>
 				<div id="last"></div>
 			</div>
@@ -249,7 +250,7 @@
 	<br>
 	<div class="phone-email">
 		<div class="phone">
-			<i class="fas fa-phone" id="phone"></i>
+			<i class="fas fa-phone" id="phoneIcon"></i>
 			<hr>
 			<h5>Give us a call</h5>
 			<p>Our scheduling department is open Monday through Friday 9am-6pm EST. If you are looking for more information about the space charter process,
@@ -260,7 +261,7 @@
 		</div>
 
 	<div class="email">
-		<i class="fas fa-envelope" id="email"></i>
+		<i class="fas fa-envelope" id="emailIcon"></i>
 		<hr>
 		<h5>Send us a message</h5>
 		<p>Email us anytime for more information or to check on your upcoming charter. You will receive an email response within 24 hours of sending. This is 
@@ -270,26 +271,28 @@
 		</a>
 	</div>
 </div>
+</div>	
+
 
 <!--
-<form action="/my-handling-form-page" method="post">
-	<ul>
-	 <li>
-	   <label for="name">Name:</label>
-	   <input type="text" id="name" name="user_name">
-	 </li>
-	 <li>
-	   <label for="mail">E-mail:</label>
-	   <input type="email" id="mail" name="user_email">
-	 </li>
-	 <li>
-	   <label for="msg">Message:</label>
-	   <textarea id="msg" name="user_message"></textarea>
-	 </li>
-	</ul>
-   </form>
+<div id="error"></div>
+<form id="form" method="GET">
+	<div>
+		<label for="name">Name</label>
+		<input id="name" name="name" type="text">
+	</div>
+	<div>
+		<label for="password">Password</label>
+		<input id="password" name="password" type="password">
+	</div>
+	<div>
+		<button type="submit">Submit</button>
+	</div>
+</form>
 -->
-</div>	
+
+
+
 
 <footer class="footer">
 	<span>&copy;2020 Echo Space Industries. All rights reserved.</span>
