made small changes, not much too note

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <!--Banner/Slider-->
     <div class="banner">
-		<img class="logo" src="img/echo-logo.png" alt="logo">
+		<img class="logo" src="img/echo-logo.png" alt="company logo">
 		<div class="banner-slide current"></div>
 		<div class="banner-slide"></div>
 		<div class="banner-slide"></div>
@@ -78,15 +78,15 @@
 	</div>
 
 	<div class="featured-img">
-		<img src="img/rocket-echo.png" alt="hands under water">
+		<img src="img/rocket-echo.png" alt="rocket ship">
 	</div>
 </div>
 
 <!--Row 2-->
 <div class="row2">
-		<img class="stats" src="img/stats-1.png">
-		<img class="stats" src="img/stats-2.png">
-		<img class="stats" src="img/stats-3.png">
+		<img class="stats" src="img/stats-1.png" alt="14 Years in Business">
+		<img class="stats" src="img/stats-2.png" alt="500+ Rockets Launched">
+		<img class="stats" src="img/stats-3.png" alt="Only 3 Passengers Lost">
 </div>
 
 <!--Row 3-->
@@ -163,8 +163,8 @@
 		<p>Interested in a payment plan? We can work with you on easy, no hassle incremental payments towards your adventure into
 			space exploration. If you participate in our super safe (not sketchy at all) experiments, we can knock a payment off.</p>
 
-		<p>So what are you waiting for? Grab your checkbook, write down 500k and send it on over to us here at Echo Space Industries.
-			To calculate your trip price, just click the button below and enter all the required information.</p>
+		<p>So what are you waiting for? Experience the wonders of our universe in style with Echo Space Industries. To calculate your
+			trip price, just click the button below and select your package, seat, destination and any addons you would like.</p>
 		
 	<button id ="pricing-button" class="page-buttons">MORE INFO ON PRICING</button>
 	<div id ="myPopup" class="popup">
@@ -236,7 +236,7 @@
 </div>
 
 	<div class="featured-img-2">
-		<img src="img/astronaut.png" alt="hands under water">
+		<img src="img/astronaut.png" alt="astronaut">
 	</div>
 </div>
 
