deleted unncessary CSS and HTML

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Echo</title>
+	<!--Icon for tab bar-->
 	<link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
 	<script src="https://kit.fontawesome.com/968f9825cc.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
@@ -27,6 +28,7 @@
         </ul>
 	</nav>
 
+<!--This div gets styled in the JS file-->
 	<div id="dimmer"></div>
 	
 <!--Nav Bar on Mobile-->
@@ -98,19 +100,19 @@
 	</div>
 	<div class="break"></div>
 	<div class="break"></div>
-		<div class="primary col"><h4><span class="numbers2">01</span>PROVEN TRACK RECORD</h4>
+		<div class="primary col"><h4><span class="numbers">01</span>PROVEN TRACK RECORD</h4>
 			<p>As you can see above, we have been in business for 14 years and successfully launched more than 500 rockets carrying more than 12,000 people into
 				space. Over this time we have only lost 3 passengers to the eternal abyss. That's only 0.0005% of all passengers! Not too shabby if you ask us.
 			</p>
 		</div>
 
-		<div class="secondary col"><h4><span class="numbers2">02</span>GOVERNMENT FUNDING</h4>
+		<div class="secondary col"><h4><span class="numbers">02</span>GOVERNMENT FUNDING</h4>
 			<p>Because space chartering is a new field, the government has taken a special interest in our business. They provide yearly funding that ensures our flights 
 				our as safe and effective as possible. All the government asks in return is that you sell all your data and never question them no matter what.
 			</p>
 		</div>
 
-		<div class="tertiary col"><h4><span class="numbers2">03</span>FIVE STAR YELP REVIEWS</h4>
+		<div class="tertiary col"><h4><span class="numbers">03</span>FIVE STAR YELP REVIEWS</h4>
 			<p>We think our reviews speak for themselves. Pop over to our Yelp page by clicking the link listed below and check out all our 5 star reviews! Customer
 				satisfaction is our highest priority from the moment you step on board to the moment you land at your celestial destination. 
 				<a href="https://www.yelp.com/biz/echo-space-industries-louisville" target="_blank"> →Yelp Page</a></p>
@@ -272,27 +274,6 @@
 	</div>
 </div>
 </div>	
-
-
-<!--
-<div id="error"></div>
-<form id="form" method="GET">
-	<div>
-		<label for="name">Name</label>
-		<input id="name" name="name" type="text">
-	</div>
-	<div>
-		<label for="password">Password</label>
-		<input id="password" name="password" type="password">
-	</div>
-	<div>
-		<button type="submit">Submit</button>
-	</div>
-</form>
--->
-
-
-
 
 <footer class="footer">
 	<span>&copy;2020 Echo Space Industries. All rights reserved.</span>
